--- a/DummyDemo/DummyDemo.vcxproj
+++ b/DummyDemo/DummyDemo.vcxproj
@@ -35,11 +35,13 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\LibraryProj_BaseSettings.props" />
+    <Import Project="..\Global_Debug.props" />
     <Import Project="DummyDemo_LibDep.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\LibraryProj_BaseSettings.props" />
+    <Import Project="..\Global_Release.props" />
     <Import Project="DummyDemo_LibDep.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
@@ -72,11 +74,13 @@
     <ClCompile Include="MinimalMsgHandler.cpp" />
     <ClCompile Include="TestMain.cpp" />
     <ClCompile Include="Test_App.cpp" />
+    <ClCompile Include="dummy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MinimalMsgHandler.h" />
     <ClInclude Include="Test_App.h" />
     <ClInclude Include="Test_Math.h" />
+    <ClInclude Include="dummy.h" />
     <ClInclude Include="Test_Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
